# Camera-Feed-2023

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  CameraController.py  Dockerfile  ImageProcessor.py  Makefile  README.md  TCP_UDP.py  app.py  camera_server.py  client.py  conanfile.txt  detections.csv  example_client.py  generate_kml.sh  hotspots.csv  persist.json  requirements.txt  server.py  source.json  start_tmux.sh  stream.py  tag.txt  tagold.txt
.github/workflows/: cppcheck.yml  linter.yml
cam/: CameraController.py  app.py  camera.py  client.py  client_UDP.py  server.py  server_UDP.py
camera_feed/: CameraController.py  ImageProcessor.py  MockCameraController.py  __init__.py
camera_feed_C/: CMakeLists.txt  readme.md
camera_feed_C/cmake/: Findarena_sdk.cmake
camera_feed_C/src/: CameraController.cpp  CameraController.h  HttpTransmitter.cpp  HttpTransmitter.h  TSQueue.h  curltest.cpp  main.cpp  multithreadtest.cpp
cmake/: Findarena_sdk.cmake
old_data/: output-2025-05-04-17-14-30  output-2025-05-04-17-15-26  output-2025-05-09-12-33-21.kml  output-2025-05-09-12-36-48.kml
python/: CameraController.py  LSM.py  README.md  __init__.py  camera_calibrate.py  camera_server.py  detect.ipynb  generate_kml.py  mavlogdump.py  output.csv  output_example.csv  parse_JSON.py  source.json  timestamp_test.py  tophat.py  trigger_test.py
python/output_kml/: output-2025-04-29-11-36-31
python/parse_text/: trig.txt
src/: AravisCamera.cpp  AravisCamera.hpp  ArenaCamera.cpp  ArenaCamera.hpp  CameraController.cpp  CameraController.h  CameraController.hpp  CprHTTP.cpp  CprHTTP.h  CprHTTP.hpp  Detector.cpp  Detector.hpp  FakeCamera.cpp  FakeCamera.hpp  FakeSerialPort.hpp  HttpTransmitter.cpp  HttpTransmitter.h  HttpTransmitter.hpp  ICamera.hpp  ISerialPort.hpp  Pipeline.hpp  RealSerialPort.hpp  SequenceQueue.hpp  TSQueue.h  TSQueue.hpp  curltest.cpp  main.cpp  multithreadtest.cpp  projection.cpp  projection.hpp
tests/: stream.py  test.py  test_benchmark.py
